--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
     <title>Type-2 to Type-3 Fee Converter</title>
 </head>
 <body>
-    <h1>Transaction Fee Calculator</h1>
-    <p>Convert EIP-1559-style transactions into Blob transactions with an abstracted blob priority fee.</p>
+    <h1>Blob Prio Fee Calculator</h1>
+    <p>Convert Blob transactions into EIP-1559-style transactions with an abstracted blob priority fee.</p>
     <p>Specify the desired blob prio fee and receive the maxFee and maxPrio values for your tx to incorporate the inputed blob prio fee.</p>
     <form id="feeForm">
         <label for="base_fee">Base Fee (Gwei):</label>
